@@ -1,7 +1,27 @@
 {
   "variants": {
-    "": {
+    "facing=down": {
+      "model": "rftoolsutility:block/spawner",
+      "x": 90
+    },
+    "facing=up": {
+      "model": "rftoolsutility:block/spawner",
+      "x": -90
+    },
+    "facing=north": {
       "model": "rftoolsutility:block/spawner"
+    },
+    "facing=south": {
+      "model": "rftoolsutility:block/spawner",
+      "y": 180
+    },
+    "facing=west": {
+      "model": "rftoolsutility:block/spawner",
+      "y": 270
+    },
+    "facing=east": {
+      "model": "rftoolsutility:block/spawner",
+      "y": 90
     }
   }
 }
