@@ -1,3 +1,6 @@
+Upcoming:
+- The Spawner is back!
+
 2.1.5-beta:
 - Use the new tick order handler system in RFToolsBase
 - Fixed a problem with the shield template being partially invisible when a smaller block was adjacent to it
